# grep4ai

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/context/: Cargo.toml
crates/context/src/: lib.rs  merge.rs  window.rs
crates/core/: Cargo.toml
crates/core/src/: app.rs  cli.rs  main.rs
crates/output/: Cargo.toml
crates/output/src/: compact.rs  human.rs  json.rs  jsonl.rs  lib.rs
crates/ranker/: Cargo.toml
crates/ranker/src/: dedup.rs  lib.rs  scorer.rs  signals.rs
crates/searcher/: Cargo.toml
crates/searcher/src/: binary.rs  engine.rs  filter.rs  lib.rs  matcher.rs
crates/tokens/: Cargo.toml
crates/tokens/src/: budget.rs  counter.rs  estimator.rs  lib.rs
crates/walker/: Cargo.toml
crates/walker/src/: filetype.rs  gitaware.rs  lib.rs  walk.rs
mcp/: index.js  package.json
npm/grep4ai/: package.json  postinstall-msg.js
npm/grep4ai-darwin-arm64/: package.json
npm/grep4ai-darwin-x64/: package.json
npm/grep4ai-linux-arm64/: package.json
npm/grep4ai-linux-x64/: package.json
npm/grep4ai-win32-x64/: package.json
npm/grepit/: install.js  package.json
npm/grepit-darwin-arm64/: package.json
npm/grepit-darwin-x64/: package.json
npm/grepit-linux-arm64/: package.json
npm/grepit-linux-x64/: package.json
npm/grepit-win32-x64/: package.json
scripts/: release.sh
