[package]
name = "grep4ai-context"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Smart context windowing for grep4ai search results"

[dependencies]
grep4ai-searcher = { workspace = true }
grep4ai-ranker = { workspace = true }
anyhow = { workspace = true }
