[package]
name = "grepit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The fastest grep tool built for AI agents"

[[bin]]
name = "grep4ai"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
grep4ai-walker = { workspace = true }
grep4ai-searcher = { workspace = true }
grep4ai-ranker = { workspace = true }
grep4ai-context = { workspace = true }
grep4ai-output = { workspace = true }
grep4ai-tokens = { workspace = true }
