[package]
name = "grep4ai-output"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Output formatters for grep4ai — JSON, JSONL, compact, and human-readable"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
grep4ai-searcher = { workspace = true }
grep4ai-ranker = { workspace = true }
grep4ai-context = { workspace = true }
grep4ai-tokens = { workspace = true }
