[package]
name = "grepit-searcher"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core search engine for grepit — parallel regex matching with memory-mapped I/O"

[dependencies]
regex = { workspace = true }
memchr = { workspace = true }
memmap2 = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
grepit-walker = { workspace = true }
