[package]
name = "grep4ai-walker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parallel, gitignore-aware directory traversal for grep4ai"

[dependencies]
ignore = { workspace = true }
crossbeam-channel = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
